--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.0",
+    "antd": "^4.16.8",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
+    "node-sass": "^6.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "redux": "^4.0.5",
+    "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
-    "typescript": "^4.3.2"
+    "sass-loader": "^12.1.0",
+    "typescript": "^4.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
