--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.16.8",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
+    "moment": "^2.29.4",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
