--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.0",
     "antd": "^4.16.8",
-    "less": "^4.1.1",
-    "less-loader": "^10.0.1",
     "moment": "^2.29.4",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.6",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -45,6 +44,8 @@
   },
   "devDependencies": {
     "customize-cra": "^1.0.0",
+    "less": "^4.2.0",
+    "less-loader": "^7.3.0",
     "react-app-rewired": "^2.2.1"
   }
 }
