--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "node-sass": "^6.0.1",
+    "pinyin-pro": "^3.24.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.6",
