--- a/package.json
+++ b/package.json
@@ -1,35 +1,34 @@
 {
   "name": "reactlearn",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@redux-devtools/extension": "^3.3.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.0",
-    "antd": "^4.16.8",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "moment": "^2.29.4",
-    "node-sass": "^6.0.1",
     "pinyin-pro": "^3.24.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-draggable": "^4.4.6",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
-    "redux-thunk": "^2.3.0",
-    "sass-loader": "^12.1.0",
-    "typescript": "^4.3.5"
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "antd": "^5.20.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
+    "react-scripts": "^5.0.1",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
+    "typescript": "^5.6.2"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -47,9 +46,17 @@
     ]
   },
   "devDependencies": {
-    "customize-cra": "^1.0.0",
+    "@eslint/js": "^9.9.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^9.9.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "globals": "^15.9.0",
     "less": "^4.2.0",
-    "less-loader": "^7.3.0",
-    "react-app-rewired": "^2.2.1"
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.0.1",
+    "vite": "^5.4.1"
   }
 }
