--- a/package.json
+++ b/package.json
@@ -5,22 +5,23 @@
   "type": "module",
   "dependencies": {
     "@redux-devtools/extension": "^3.3.0",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
-    "moment": "^2.29.4",
-    "pinyin-pro": "^3.24.2",
-    "react-draggable": "^4.4.6",
-    "redux-saga": "^1.1.3",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "antd": "^5.20.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "moment": "^2.29.4",
+    "pinyin-pro": "^3.24.2",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^3.1.0",
     "typescript": "^5.6.2"
   },
