--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@redux-devtools/extension": "^3.3.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "antd": "^5.20.6",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
