--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.20.6",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "pinyin-pro": "^3.24.2",
     "react": "^18.3.1",
